Fixed navbar spacing issue and added logo

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -67,13 +67,13 @@ $dropDown       : false;
 .navbar > .container .navbar-brand, 
 .navbar > .container-fluid .navbar-brand {
   font-size: 20px;
-  line-height: 80px;
+  line-height: 55px;
 }
 
 /* Navbar List Items */
 .navbar-default .navbar-nav li a {
   font-size: 18px;
-  line-height: 80px;
+  line-height: 55px;
 }
 
 
